@@ -20,14 +20,13 @@ require_relative 'spec_helper'
 module Selenium
   module WebDriver
     module DriverExtensions
-      describe HasWebStorage, only: {browser: %i[chrome firefox]} do
+      describe HasWebStorage, only: {browser: %i[chrome ie firefox]} do
         shared_examples 'web storage' do
           before do
             driver.navigate.to url_for('clicks.html')
             storage.clear
           end
 
-          # https://bugs.chromium.org/p/chromedriver/issues/detail?id=2177 - To monitor as recently fixed
           it 'can get and set items' do
             expect(storage).to be_empty
             storage['foo'] = 'bar'
@@ -49,7 +48,6 @@ module Selenium
             expect(storage.keys).to include('foo1', 'foo2', 'foo3')
           end
 
-          # https://bugs.chromium.org/p/chromedriver/issues/detail?id=2177 - To monitor as recently fixed
           it 'can clear all items' do
             storage['foo1'] = 'bar1'
             storage['foo2'] = 'bar2'
